--- a/build.gradle
+++ b/build.gradle
@@ -415,4 +415,19 @@ configure(rootProject) {
 			}
 		}
 	}
+
+	buildscript {
+		repositories {
+			maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+			google()
+		}
+	}
+
+	allprojects {
+		repositories {
+			maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+			google()
+		}
+	}
+
 }
